[gd_scene load_steps=8 format=3 uid="uid://co8y188ycb8fj"]

[ext_resource type="Script" path="res://scenes/obstacles/painting.gd" id="1_0voqn"]
[ext_resource type="Script" path="res://scenes/obstacles/painting_parent.gd" id="1_eu74o"]
[ext_resource type="Texture2D" uid="uid://ccruc327bum4r" path="res://scenes/assets/arts/picture2.png" id="2_quhto"]
[ext_resource type="PackedScene" uid="uid://v4yt1hf67uqr" path="res://scenes/shadow/shadow.tscn" id="3_15vs3"]
[ext_resource type="PackedScene" uid="uid://c3g0phbhutt4u" path="res://scenes/collision_sound/collision_sound.tscn" id="5_h6qtj"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_wlald"]
size = Vector2(544, 66)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_2mvhj"]
size = Vector2(545, 726)

[node name="Painting" type="Node2D"]
position = Vector2(-1, 0)
script = ExtResource("1_eu74o")

[node name="Painting" type="RigidBody2D" parent="."]
position = Vector2(0, 288)
collision_layer = 4
collision_mask = 4
mass = 3.94
script = ExtResource("1_0voqn")

[node name="Sprite2D" type="Sprite2D" parent="Painting"]
position = Vector2(0, 201)
scale = Vector2(0.640301, 0.640301)
texture = ExtResource("2_quhto")

[node name="Shadow" parent="Painting/Sprite2D" instance=ExtResource("3_15vs3")]
position = Vector2(0, 31.2353)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Painting"]
position = Vector2(0, -128)
shape = SubResource("RectangleShape2D_wlald")
one_way_collision = true

[node name="MarkerLeft" type="Marker2D" parent="Painting"]
position = Vector2(-230, -155)

[node name="MarkerRight" type="Marker2D" parent="Painting"]
position = Vector2(210, -154)

[node name="BigCollider" type="CollisionShape2D" parent="Painting"]
position = Vector2(-0.5, 203)
shape = SubResource("RectangleShape2D_2mvhj")
disabled = true

[node name="CollisionSound" parent="Painting" instance=ExtResource("5_h6qtj")]

[node name="StaticBody2D" type="StaticBody2D" parent="."]
collision_layer = 0
collision_mask = 0

[node name="PinJoint2D" type="PinJoint2D" parent="."]
node_a = NodePath("../Painting")
node_b = NodePath("../StaticBody2D")
